--- a/pypy-3.10.yaml
+++ b/pypy-3.10.yaml
@@ -1,6 +1,6 @@
 package:
   name: pypy-3.10
-  description: PyPy is a very fast and compliant implementation of the Python language v 3.11
+  description: PyPy is a very fast and compliant implementation of the Python language v 3.10
   epoch: 0
   version: 7.3.18
   copyright:
@@ -57,32 +57,52 @@ pipeline:
       /usr/lib/pypy/bin/pypy-c ../../rpython/bin/rpython --opt=jit --shared targetpypystandalone
 
   - runs: |
-      mkdir -p ${{targets.contextdir}}/usr/bin/pypy-c
-      mkdir -p ${{targets.contextdir}}/usr/lib/
       mkdir -p ${{targets.contextdir}}/usr/bin
       install -Dm755 pypy/goal/pypy${{vars.extracted-version}}-c "${{targets.contextdir}}"/usr/bin/pypy${{vars.extracted-version}}-c
       install -Dm755 pypy/goal/libpypy${{vars.extracted-version}}-c.so "${{targets.contextdir}}"/usr/bin/libpypy${{vars.extracted-version}}-c.so
-
-      rsync -r --exclude='__pycache__' --exclude='test' --exclude='tests' lib-python/ "${{targets.contextdir}}"/usr/lib-python/
-      rsync -r --exclude='__pycache__' --exclude='*.c' --exclude '*.o' lib_pypy/ "${{targets.contextdir}}"/usr/lib_pypy/
-      rsync -r --include='*.h' -f 'hide,! */' include/ "${{targets.contextdir}}"/usr/include/
+      install -Dm755 bin/pip3 "${{targets.contextdir}}"/usr/bin/pip3
 
       # # Install symlinks
       ln -s pypy${{vars.extracted-version}}-c  ${{targets.contextdir}}/usr/bin/pypy
+      ln -s pip3 ${{targets.contextdir}}/usr/bin/pip
+
+  - uses: strip
 
 subpackages:
+  - name: "${{package.name}}-dev"
+    description: "python3 development headers"
+    dependencies:
+      runtime:
+        - ${{package.name}}=${{package.full-version}}
+    pipeline:
+      - runs: |
+          mkdir -p ${{targets.contextdir}}/usr/bin
+          mkdir -p ${{targets.contextdir}}/usr/lib/
+          rm -R lib-python/3/ensurepip/_bundled/
+
+          rsync -r --exclude='__pycache__' --exclude='test' --exclude='tests' lib-python/ "${{targets.contextdir}}"/usr/lib-python/
+          rsync -r --exclude='__pycache__' --exclude='*.c' --exclude '*.o' lib_pypy/ "${{targets.contextdir}}"/usr/lib_pypy/
+          rsync -r --include='*.h' -f 'hide,! */' include/ "${{targets.contextdir}}"/usr/include/
+
   - name: ${{package.name}}-compat
-    description: PyPy 3.11 compatibility layer
+    description: PyPy 3.10 compatibility layer
     pipeline:
       - runs: |
           mkdir -p ${{targets.contextdir}}/usr/local/bin/
           mkdir -p ${{targets.contextdir}}/opt/pypy/bin
           ln -s /usr/bin/pypy${{vars.extracted-version}}-c ${{targets.contextdir}}/usr/local/bin/pypy3
           ln -s /usr/bin/pypy${{vars.extracted-version}}-c ${{targets.contextdir}}/opt/pypy/bin/pypy3
+          ln -s /usr/bin/pip3 ${{targets.contextdir}}/opt/pypy/bin/pip3
     test:
+      environment:
+        contents:
+          packages:
+            - ${{package.name}}
       pipeline:
-        - runs: pypy3 --version
-        - runs: pypy3 -c "import os, sys, math, random, datetime; print('Modules OK')"
+        - runs: stat /opt/pypy/bin/pypy3
+        - runs: |
+            export PATH=$PATH:/opt/pypy/bin
+            pypy3 --version
 
 test:
   pipeline:
@@ -92,7 +112,8 @@ test:
         start: "pypy --version"
         timeout: 120
         expected_output: |
-          Server Running    - runs: pypy -c "import os, sys, math, random, datetime; print('Modules OK')"
+          PyPy ${{package.version}}
+    - runs: pypy -c "import os, sys, math, random, datetime; print('Modules OK')"
     - runs: |
         cat <<EOF >test.py
         import time
@@ -117,5 +138,5 @@ update:
   enabled: true
   github:
     identifier: pypy/pypy
-    strip-prefix: release-pypy3.11-v
+    strip-prefix: release-pypy3.10-v
     use-tag: true
