--- a/pypy-3.11.yaml
+++ b/pypy-3.11.yaml
@@ -57,20 +57,33 @@ pipeline:
       /usr/lib/pypy/bin/pypy-c ../../rpython/bin/rpython --opt=jit --shared targetpypystandalone
 
   - runs: |
-      mkdir -p ${{targets.contextdir}}/usr/bin/pypy-c
-      mkdir -p ${{targets.contextdir}}/usr/lib/
       mkdir -p ${{targets.contextdir}}/usr/bin
+
       install -Dm755 pypy/goal/pypy${{vars.extracted-version}}-c "${{targets.contextdir}}"/usr/bin/pypy${{vars.extracted-version}}-c
       install -Dm755 pypy/goal/libpypy${{vars.extracted-version}}-c.so "${{targets.contextdir}}"/usr/bin/libpypy${{vars.extracted-version}}-c.so
-
-      rsync -r --exclude='__pycache__' --exclude='test' --exclude='tests' lib-python/ "${{targets.contextdir}}"/usr/lib-python/
-      rsync -r --exclude='__pycache__' --exclude='*.c' --exclude '*.o' lib_pypy/ "${{targets.contextdir}}"/usr/lib_pypy/
-      rsync -r --include='*.h' -f 'hide,! */' include/ "${{targets.contextdir}}"/usr/include/
+      install -Dm755 bin/pip3 "${{targets.contextdir}}"/usr/bin/pip3
 
       # # Install symlinks
       ln -s pypy${{vars.extracted-version}}-c  ${{targets.contextdir}}/usr/bin/pypy
+      ln -s pip3 ${{targets.contextdir}}/usr/bin/pip
+
+  - uses: strip
 
 subpackages:
+  - name: "${{package.name}}-dev"
+    description: "python3 development headers"
+    dependencies:
+      runtime:
+        - ${{package.name}}=${{package.full-version}}
+    pipeline:
+      - runs: |
+          mkdir -p ${{targets.contextdir}}/usr/bin
+          mkdir -p ${{targets.contextdir}}/usr/lib/
+          rm -R lib-python/3/ensurepip/_bundled/
+          rsync -r --exclude='__pycache__' --exclude='test' --exclude='tests' lib-python/ "${{targets.contextdir}}"/usr/lib-python/
+          rsync -r --exclude='__pycache__' --exclude='*.c' --exclude '*.o' lib_pypy/ "${{targets.contextdir}}"/usr/lib_pypy/
+          rsync -r --include='*.h' -f 'hide,! */' include/ "${{targets.contextdir}}"/usr/include/
+
   - name: ${{package.name}}-compat
     description: PyPy 3.11 compatibility layer
     pipeline:
@@ -79,14 +92,27 @@ subpackages:
           mkdir -p ${{targets.contextdir}}/opt/pypy/bin
           ln -s /usr/bin/pypy${{vars.extracted-version}}-c ${{targets.contextdir}}/usr/local/bin/pypy3
           ln -s /usr/bin/pypy${{vars.extracted-version}}-c ${{targets.contextdir}}/opt/pypy/bin/pypy3
+          ln -s /usr/bin/pip3 ${{targets.contextdir}}/opt/pypy/bin/pip3
     test:
+      environment:
+        contents:
+          packages:
+            - ${{package.name}}
       pipeline:
-        - runs: pypy3 --version
-        - runs: pypy3 -c "import os, sys, math, random, datetime; print('Modules OK')"
+        - runs: stat /opt/pypy/bin/pypy3
+        - runs: |
+            export PATH=$PATH:/opt/pypy/bin
+            pypy3 --version
 
 test:
   pipeline:
-    - runs: pypy --version
+    - name: "check version"
+      uses: test/daemon-check-output
+      with:
+        start: "pypy --version"
+        timeout: 120
+        expected_output: |
+          PyPy ${{package.version}}
     - runs: pypy -c "import os, sys, math, random, datetime; print('Modules OK')"
     - runs: |
         cat <<EOF >test.py
