--- a/pypy-bootstrap.yaml
+++ b/pypy-bootstrap.yaml
@@ -1,7 +1,7 @@
 package:
   name: pypy-bootstrap
+  version: "7.3.19"
   epoch: 0
-  version: 7.3.18
   copyright:
     - license: Apache-2.0
   dependencies:
@@ -36,18 +36,26 @@ environment:
       - util-linux-misc
       - xz-dev
       - zlib-dev
+  environment:
+    PY_BUILD: /home/build/python-build
+    PY_INSTALL: /home/build/python-install
 
 pipeline:
-  - uses: git-checkout
+  - runs: mkdir -p "$PY_BUILD"
+
+  - working-directory: "$PY_BUILD"
+    uses: git-checkout
     with:
       repository: https://github.com/python/cpython.git
       tag: v2.7.18
       expected-commit: 8d21aa21f2cbc6d50aab3f420bb23be1d081dac4
 
   ## Force the build to use system provided modules
-  - runs: rm -r Modules/expat Modules/_ctypes/libffi* Modules/zlib
+  - working-directory: "$PY_BUILD"
+    runs: rm -r Modules/expat Modules/_ctypes/libffi* Modules/zlib
 
-  - uses: autoconf/configure
+  - working-directory: "$PY_BUILD"
+    uses: autoconf/configure
     with:
       opts: |
         --enable-ipv6 \
@@ -57,12 +65,14 @@ pipeline:
         --with-system-zlib \
         --with-threads
 
-  - runs: make LD_RUN_PATH="${{targets.destdir}}/usr/lib"
+  - working-directory: "$PY_BUILD"
+    uses: autoconf/make
 
-  - runs: DESTDIR=/tmp/python make install
+  - working-directory: "$PY_BUILD"
+    runs: DESTDIR="$PY_INSTALL" make -j$(nproc) install
 
-  - uses: git-checkout
-    working-directory: pycparser
+  - working-directory: pycparser
+    uses: git-checkout
     with:
       repository: https://github.com/eliben/pycparser.git
       ## v2.21 is the last version of pycparser with python2.7 compatibility. v2.22 expects python3
@@ -71,36 +81,32 @@ pipeline:
 
   - working-directory: pycparser
     runs: |
-      /tmp/python/usr/bin/python setup.py install
+      PATH="$PY_INSTALL/usr/bin:$PATH" LD_LIBRARY_PATH="$PY_INSTALL/usr/lib" \
+        python setup.py install
 
   - uses: git-checkout
     with:
       repository: https://github.com/pypy/pypy.git
       tag: release-pypy2.7-v${{package.version}}
-      expected-commit: 639309b2bd147c86b8907350f38a37d7d3f49703
-
-  - uses: patch
-    with:
-      patches: 0001-fix-cast-result-to-intptr_t-in-vmprof_write_header_f.patch
+      expected-commit: 09418b2db4218a8bea681afbb3477b92b6553d82
 
   - working-directory: pypy/goal
     runs: |
-      /tmp/python/usr/bin/python ../../rpython/bin/rpython --opt=jit targetpypystandalone
+      PATH="$PY_INSTALL/usr/bin:$PATH" LD_LIBRARY_PATH="$PY_INSTALL/usr/lib" \
+        python ../../rpython/bin/rpython --opt=jit targetpypystandalone
 
   - runs: |
-      mkdir -p ${{targets.contextdir}}/usr/lib/pypy/bin
-      mkdir -p ${{targets.contextdir}}/usr/lib/lib_pypy
-      install -Dm755 pypy/goal/pypy-c "${{targets.contextdir}}"/usr/lib/pypy/bin/pypy-c
-      install -Dm755 pypy/goal/libpypy-c.so "${{targets.contextdir}}"/usr/lib/pypy/bin/libpypy-c.so
+      mkdir -p ${{targets.contextdir}}/usr/lib/${{package.name}}/bin
+      install -Dm755 pypy/goal/pypy-c "${{targets.contextdir}}"/usr/lib/${{package.name}}/bin/pypy-c
+      install -Dm755 pypy/goal/libpypy-c.so "${{targets.contextdir}}"/usr/lib/${{package.name}}/bin/libpypy-c.so
 
   - runs: |
-      rsync -r --exclude='__pycache__' --exclude='test' --exclude='tests' lib-python/ "${{targets.contextdir}}"/usr/lib/pypy/lib-python/
-      rsync -r --exclude='__pycache__' --exclude='*.c' --exclude '*.o' lib_pypy/ "${{targets.contextdir}}"/usr/lib/pypy/lib_pypy/
-      rsync -r --include='*.h' -f 'hide,! */' include/ "${{targets.contextdir}}"/usr/lib/pypy/include/
+      rsync -r --exclude='__pycache__' --exclude='test' --exclude='tests' lib-python/ "${{targets.contextdir}}"/usr/lib/${{package.name}}/lib-python/
+      rsync -r --exclude='__pycache__' --exclude='*.c' --exclude '*.o' lib_pypy/ "${{targets.contextdir}}"/usr/lib/${{package.name}}/lib_pypy/
+      rsync -r --include='*.h' -f 'hide,! */' include/ "${{targets.contextdir}}"/usr/lib/${{package.name}}/include/
 
   - runs: |
-      rm -rf ${{targets.contextdir}}/usr/lib-python/2.7/ensurepip/_bundled
-      rm -rf ${{targets.contextdir}}/usr/lib/pypy/lib-python/2.7/ensurepip/_bundled
+      rm -rf ${{targets.contextdir}}/usr/lib/${{package.name}}/lib-python/2.7/ensurepip/_bundled
 
 test:
   environment:
@@ -108,7 +114,7 @@ test:
       packages:
         - expat-dev
   pipeline:
-    - runs: /usr/lib/pypy/bin/pypy-c --version
+    - runs: /usr/lib/${{package.name}}/bin/pypy-c --version
 
 update:
   enabled: true
