add test for compat package
Signed-off-by: YashPimple <yashpimple22@gmail.com>

--- a/grafana-operator.yaml
+++ b/grafana-operator.yaml
@@ -43,8 +43,8 @@ subpackages:
     test:
       pipeline:
         - runs: |
-            run-script --version
-            run-script --help
+            /opt/bitnami/grafana-operator/bin/grafana-operator --help
+            /opt/bitnami/grafana-operator/bin/grafana-operator -h
 
 update:
   enabled: true
