--- a/datadog-agent.yaml
+++ b/datadog-agent.yaml
@@ -120,7 +120,15 @@ pipeline:
 
   - uses: go/bump
     with:
+      deps: github.com/docker/distribution@v2.8.3
       replaces: github.com/mholt/archiver/v3=github.com/anchore/archiver/v3@v3.5.2
+      show-diff: true
+
+  - uses: go/bump
+    with:
+      modroot: pkg/trace
+      # Requires +incompatible or it'll throw an error
+      deps: github.com/docker/distribution@v2.8.3+incompatible
       show-diff: true
 
   - if: ${{build.arch}} == 'aarch64'
@@ -235,8 +243,10 @@ pipeline:
       install -Dm755 Dockerfiles/agent/secrets-helper/readsecret.sh ${{targets.contextdir}}/readsecret.sh
       install -Dm755 Dockerfiles/agent/secrets-helper/readsecret_multiple_providers.sh ${{targets.contextdir}}/readsecret_multiple_providers.sh
 
+      # confd used for easy reuse below
       confd=${{targets.contextdir}}/etc/datadog-agent/conf.d
       cp -r bin/agent/dist/conf.d "$confd"
+
       # https://github.com/NixOS/nixpkgs/pull/189795
       # the agent apparently loads .yaml.default files, which then cause noise in logs.
       rm -rf \
