--- a/argo-cd-2.14.yaml
+++ b/argo-cd-2.14.yaml
@@ -1,7 +1,7 @@
 package:
   name: argo-cd-2.14
   version: "2.14.3"
-  epoch: 0
+  epoch: 1
   description: Declarative continuous deployment for Kubernetes.
   copyright:
     - license: Apache-2.0
@@ -84,6 +84,8 @@ subpackages:
           mkdir -p "${{targets.subpkgdir}}"/usr/bin
           cp hack/gpg-wrapper.sh "${{targets.subpkgdir}}"/usr/bin/gpg-wrapper.sh
           cp hack/git-verify-wrapper.sh "${{targets.subpkgdir}}"/usr/bin/git-verify-wrapper.sh
+          mkdir -p "${{targets.contextdir}}"/etc/ssh
+          touch "${{targets.contextdir}}"/etc/ssh/ssh_known_hosts
 
   - name: ${{package.name}}-compat
     description: "Compatibility package for locating binaries according to upstream helm charts"
