--- a/s2n-tls.yaml
+++ b/s2n-tls.yaml
@@ -1,7 +1,7 @@
 package:
   name: s2n-tls
   version: "1.5.13"
-  epoch: 0
+  epoch: 1
   description: AWS C99 implementation of the TLS/SSL protocols
   copyright:
     - license: Apache-2.0
@@ -56,6 +56,11 @@ subpackages:
         - openssl-dev
         - s2n-tls
     description: s2n-tls dev
+    test:
+      pipeline:
+        - uses: test/ldd-check
+          with:
+            packages: s2n-tls-dev
 
 test:
   environment:
