--- a/s-lang.yaml
+++ b/s-lang.yaml
@@ -1,7 +1,7 @@
 package:
   name: s-lang
   version: 2.3.3
-  epoch: 3
+  epoch: 4
   description: Library for creating multi-platform software
   copyright:
     - license: GPL-2.0-or-later
@@ -41,6 +41,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: ${{subpkg.name}}
     dependencies:
       runtime:
         - s-lang
