--- a/rustls-ffi.yaml
+++ b/rustls-ffi.yaml
@@ -1,7 +1,7 @@
 package:
   name: rustls-ffi
   version: 0.14.1
-  epoch: 2
+  epoch: 3
   description: "C-to-rustls bindings"
   copyright:
     - license: MIT
@@ -39,6 +39,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: ${{subpkg.name}}
     dependencies:
       runtime:
         - ${{package.name}}
