--- a/attr.yaml
+++ b/attr.yaml
@@ -1,7 +1,7 @@
 package:
   name: attr
   version: 2.5.2
-  epoch: 5
+  epoch: 6
   description: "utilities for managing filesystem extended attributes"
   copyright:
     - license: GPL-2.0-or-later
@@ -64,6 +64,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: attr-dev
 
   - name: "libattr1"
     description: "library for managing filesystem extended attributes"
