--- a/aws-c-common.yaml
+++ b/aws-c-common.yaml
@@ -1,7 +1,7 @@
 package:
   name: aws-c-common
   version: "0.11.1"
-  epoch: 0
+  epoch: 1
   description: Core c99 package for AWS SDK for C including cross-platform primitives, configuration, data structures, and error handling
   copyright:
     - license: Apache-2.0
@@ -45,6 +45,11 @@ subpackages:
       runtime:
         - aws-c-common
     description: aws-c-common dev
+    test:
+      pipeline:
+        - uses: test/tw/ldd-check
+          with:
+            packages: ${{subpkg.name}}
 
 test:
   pipeline:
