--- a/aws-c-compression.yaml
+++ b/aws-c-compression.yaml
@@ -1,7 +1,7 @@
 package:
   name: aws-c-compression
   version: "0.3.1"
-  epoch: 0
+  epoch: 1
   description: C99 implementation of huffman encoding/decoding
   copyright:
     - license: Apache-2.0
@@ -43,6 +43,11 @@ subpackages:
     pipeline:
       - uses: split/dev
     description: aws-c-compression dev
+    test:
+      pipeline:
+        - uses: test/tw/ldd-check
+          with:
+            packages: ${{subpkg.name}}
 
 test:
   pipeline:
