--- a/aws-c-event-stream.yaml
+++ b/aws-c-event-stream.yaml
@@ -1,7 +1,7 @@
 package:
   name: aws-c-event-stream
   version: "0.5.2"
-  epoch: 0
+  epoch: 1
   description: "AWS C99 implementation of the vnd.amazon.eventstream content-type"
   copyright:
     - license: Apache-2.0
@@ -51,6 +51,11 @@ subpackages:
       runtime:
         - aws-c-event-stream
     description: aws-c-event-stream dev
+    test:
+      pipeline:
+        - uses: test/tw/ldd-check
+          with:
+            packages: aws-c-event-stream-dev
 
 test:
   pipeline:
