--- a/aws-checksums.yaml
+++ b/aws-checksums.yaml
@@ -1,7 +1,7 @@
 package:
   name: aws-checksums
   version: "0.2.3"
-  epoch: 0
+  epoch: 1
   description: AWS Cross-Platform HW accelerated CRC32c and CRC32 with fallback to efficient SW implementations
   copyright:
     - license: Apache-2.0
@@ -46,6 +46,11 @@ subpackages:
       runtime:
         - aws-checksums
     description: aws-checksums dev
+    test:
+      pipeline:
+        - uses: test/tw/ldd-check
+          with:
+            packages: aws-checksums-dev
 
 test:
   pipeline:
