--- a/aws-c-http.yaml
+++ b/aws-c-http.yaml
@@ -1,7 +1,7 @@
 package:
   name: aws-c-http
   version: "0.9.3"
-  epoch: 0
+  epoch: 1
   description: AWS C99 implementation of the HTTP/1.1 and HTTP/2 specifications
   copyright:
     - license: Apache-2.0
@@ -50,6 +50,11 @@ subpackages:
       runtime:
         - aws-c-http
     description: aws-c-http dev
+    test:
+      pipeline:
+        - uses: test/tw/ldd-check
+          with:
+            packages: aws-c-http-dev
 
 test:
   pipeline:
