--- a/aws-c-io.yaml
+++ b/aws-c-io.yaml
@@ -1,7 +1,7 @@
 package:
   name: aws-c-io
   version: "0.17.0"
-  epoch: 0
+  epoch: 1
   description: Module for the AWS SDK for C handling all IO and TLS work for application protocols
   copyright:
     - license: Apache-2.0
@@ -51,6 +51,11 @@ subpackages:
         - openssl-dev
         - aws-c-io
     description: aws-c-io dev
+    test:
+      pipeline:
+        - uses: test/tw/ldd-check
+          with:
+            packages: aws-c-io-dev
 
 update:
   enabled: true
