--- a/aws-c-mqtt.yaml
+++ b/aws-c-mqtt.yaml
@@ -1,7 +1,7 @@
 package:
   name: aws-c-mqtt
   version: "0.12.2"
-  epoch: 0
+  epoch: 1
   description: AWS C99 implementation of the MQTT 3.1.1 specification
   copyright:
     - license: Apache-2.0
@@ -52,6 +52,11 @@ subpackages:
       runtime:
         - aws-c-mqtt
     description: aws-c-mqtt dev
+    test:
+      pipeline:
+        - uses: test/tw/ldd-check
+          with:
+            packages: aws-c-mqtt-dev
 
 update:
   enabled: true
