--- a/aws-c-s3.yaml
+++ b/aws-c-s3.yaml
@@ -1,7 +1,7 @@
 package:
   name: aws-c-s3
   version: "0.7.11"
-  epoch: 0
+  epoch: 1
   description: "AWS C99 library implementation for communicating with the S3 service"
   copyright:
     - license: Apache-2.0
@@ -63,6 +63,11 @@ subpackages:
       runtime:
         - aws-c-s3
     description: aws-c-s3 dev
+    test:
+      pipeline:
+        - uses: test/tw/ldd-check
+          with:
+            packages: aws-c-s3-dev
 
 test:
   pipeline:
