--- a/aws-c-sdkutils.yaml
+++ b/aws-c-sdkutils.yaml
@@ -1,7 +1,7 @@
 package:
   name: aws-c-sdkutils
   version: "0.2.3"
-  epoch: 0
+  epoch: 1
   description: C99 library implementing AWS SDK specific utilities
   copyright:
     - license: Apache-2.0
@@ -46,6 +46,11 @@ subpackages:
       runtime:
         - aws-c-sdkutils
     description: aws-c-sdkutils dev
+    test:
+      pipeline:
+        - uses: test/tw/ldd-check
+          with:
+            packages: aws-c-sdkutils-dev
 
 test:
   pipeline:
