--- a/kube-state-metrics.yaml
+++ b/kube-state-metrics.yaml
@@ -42,8 +42,11 @@ subpackages:
           image: ${{package.name}}
           version-path: 2/debian-12
       - runs: |
-          mkdir -p ${{targets.contextdir}}/opt/bitnami/alertmanager/bin/
-          ln -sf /usr/bin/kube-state-metrics ${{targets.contextdir}}/opt/bitnami/alertmanager/bin/kube-state-metrics
+          mkdir -p ${{targets.contextdir}}/opt/bitnami/kube-state-metrics/bin/
+          ln -sf /usr/bin/kube-state-metrics ${{targets.contextdir}}/opt/bitnami/kube-state-metrics/bin/kube-state-metrics
+    test:
+      pipeline:
+        - runs: stat /opt/bitnami/kube-state-metrics/bin/kube-state-metrics
 
 update:
   enabled: true
