--- a/mysql-9.1.yaml
+++ b/mysql-9.1.yaml
@@ -171,9 +171,18 @@ subpackages:
           ln -sf /proc/1/fd/1 "${{targets.contextdir}}/opt/bitnami/mysql/logs/mysqld.log"
     test:
       environment:
+        accounts:
+          users:
+            - username: bitnami
+              uid: 1001
+              gid: 0
+          run-as: 0
         contents:
           packages:
             - ${{package.name}}
+            - busybox
+            - coreutils
+            - sudo
         environment:
           BITNAMI_APP_NAME: mysql
           MYSQL_ROOT_PASSWORD: UltraS3cure
@@ -192,7 +201,11 @@ subpackages:
         - name: "Test entrypoint and run scripts"
           uses: test/daemon-check-output
           with:
-            start: /opt/bitnami/scripts/mysql/entrypoint.sh /opt/bitnami/scripts/mysql/run.sh
+            setup: |
+              rm -f /opt/bitnami/mysql/logs/mysqld.log
+              mkdir -p /bitnami/data/mysql /opt/bitnami/mysql/tmp /opt/bitnami/mysql/run
+              chown -fR 1001:0 /bitnami /opt/bitnami/mysql
+            start: sudo -E -u bitnami /opt/bitnami/scripts/mysql/entrypoint.sh /opt/bitnami/scripts/mysql/run.sh
             post: |
               set -e
 
