--- a/flux-helm-controller.yaml
+++ b/flux-helm-controller.yaml
@@ -33,6 +33,25 @@ pipeline:
       output: helm-controller
       packages: .
 
+subpackages:
+  - name: fluxcd-helm-controller-bitnami-compat
+    description: "compat package with bitnami/flux image"
+    pipeline:
+      - uses: bitnami/compat
+        with:
+          image: fluxcd-helm-controller
+          version-path: 1/debian-12
+      - runs: |
+          mkdir -p ${{targets.subpkgdir}}/opt/bitnami/fluxcd-helm-controller/bin/
+          chmod g+rwX ${{targets.subpkgdir}}/opt/bitnami
+          ln -sf /usr/bin/helm-controller ${{targets.subpkgdir}}/opt/bitnami/fluxcd-helm-controller/bin/helm-controller
+          cp LICENSE ${{targets.subpkgdir}}/opt/bitnami/licenses/LICENSE
+    test:
+      pipeline:
+        - runs: |
+            run-script --version
+            run-script --help
+
 update:
   enabled: true
   ignore-regex-patterns:
