--- a/flux-kustomize-controller.yaml
+++ b/flux-kustomize-controller.yaml
@@ -47,6 +47,25 @@ pipeline:
       output: kustomize-controller
       packages: .
 
+subpackages:
+  - name: fluxcd-kustomize-controller-bitnami-compat
+    description: "compat package with bitnami/flux image"
+    pipeline:
+      - uses: bitnami/compat
+        with:
+          image: fluxcd-kustomize-controller
+          version-path: 1/debian-12
+      - runs: |
+          mkdir -p ${{targets.subpkgdir}}/opt/bitnami/fluxcd-kustomize-controller/bin/
+          chmod g+rwX ${{targets.subpkgdir}}/opt/bitnami
+          ln -sf /usr/bin/kustomize-controller ${{targets.subpkgdir}}/opt/bitnami/fluxcd-kustomize-controller/bin/kustomize-controller
+          cp LICENSE ${{targets.subpkgdir}}/opt/bitnami/licenses/LICENSE
+    test:
+      pipeline:
+        - runs: |
+            run-script --version
+            run-script --help
+
 update:
   ignore-regex-patterns:
     - api/
