--- a/harfbuzz.yaml
+++ b/harfbuzz.yaml
@@ -1,7 +1,7 @@
 package:
   name: harfbuzz
   version: "10.4.0"
-  epoch: 0
+  epoch: 1
   description: Text shaping library
   copyright:
     - license: MIT
@@ -71,6 +71,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: ${{subpkg.name}}
 
   - name: harfbuzz-icu
     pipeline:
@@ -124,6 +127,9 @@ test:
         - harfbuzz-utils
         - ttf-dejavu
   pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: ${{package.name}}
     - name: "Test basic text shaping"
       runs: |
         hb-view --font-file=/usr/share/fonts/ttf-dejavu/DejaVuSans.ttf \
