--- a/aws-c-auth.yaml
+++ b/aws-c-auth.yaml
@@ -1,7 +1,7 @@
 package:
   name: aws-c-auth
   version: "0.8.5"
-  epoch: 0
+  epoch: 1
   description: "C99 library implementation of AWS client-side authentication: standard credentials providers and signing"
   copyright:
     - license: Apache-2.0
@@ -53,6 +53,11 @@ subpackages:
       runtime:
         - aws-c-auth
     description: aws-c-auth dev
+    test:
+      pipeline:
+        - uses: test/tw/ldd-check
+          with:
+            packages: ${{subpkg.name}}
 
 test:
   pipeline:
