fix bitnami symlink
Signed-off-by: Michael Paul <31833332+MickeyPvX@users.noreply.github.com>

--- a/keycloak-config-cli.yaml
+++ b/keycloak-config-cli.yaml
@@ -1,7 +1,7 @@
 package:
   name: keycloak-config-cli
   version: 6.4.0
-  epoch: 1
+  epoch: 2
   description: Import YAML/JSON-formatted configuration files into Keycloak - Configuration as Code for Keycloak.
   copyright:
     - license: Apache-2.0
@@ -122,13 +122,13 @@ subpackages:
 
           ln -sf ${JAVA_HOME} ${{targets.contextdir}}/opt/bitnami/java
           ln -sf /usr/share/java/${{package.name}}/${{package.name}}.jar ${{targets.contextdir}}/opt/bitnami/${{package.name}}/${{package.name}}-${KEYCLOAK_VERSION}.jar
-          ln -sf ./${{package.name}}-${KEYCLOAK_VERSION}.jar ${{targets.contextdir}}/opt/bitnami/${{package.name}}/${{package.name}}.jar
+          ln -sf /opt/bitnami/${{package.name}}/${{package.name}}-${KEYCLOAK_VERSION}.jar ${{targets.contextdir}}/opt/bitnami/${{package.name}}/${{package.name}}.jar
     test:
       environment:
         accounts:
           users:
             - username: bitnami
-              gid: 0
+              gid: 1001
               uid: 1001
           run-as: 0
         contents:
