--- a/botan.yaml
+++ b/botan.yaml
@@ -1,7 +1,7 @@
 package:
   name: botan
   version: "3.7.1"
-  epoch: 1
+  epoch: 2
   description: "Cryptography Toolkit"
   copyright:
     - license: BSD-2-Clause
@@ -56,6 +56,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: botan-dev
 
 update:
   enabled: true
