--- a/btrfs-progs.yaml
+++ b/btrfs-progs.yaml
@@ -1,7 +1,7 @@
 package:
   name: btrfs-progs
   version: "6.13"
-  epoch: 0
+  epoch: 1
   description: BTRFS filesystem utilities
   copyright:
     - license: GPL-2.0-or-later
@@ -60,6 +60,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: btrfs-progs-dev
 
   - name: py3-btrfs-progs
     description: Python 3 bindings for btrfs-progs
