Add the ldd-check test to bzip2

--- a/bzip2.yaml
+++ b/bzip2.yaml
@@ -1,7 +1,7 @@
 package:
   name: bzip2
   version: 1.0.8
-  epoch: 10
+  epoch: 11
   description: "a library implementing the bzip2 compression algorithms"
   copyright:
     - license: MPL-2.0 AND MIT
@@ -81,6 +81,11 @@ subpackages:
       - uses: split/dev
       - runs: |
           ln -s libbz2.so.1 "${{targets.subpkgdir}}"/usr/lib/libbz2.so
+    test:
+      pipeline:
+        - uses: test/tw/ldd-check
+          with:
+            packages: bzip2-dev
 
   - name: bzip2-doc
     description: bzip2 docs
