--- a/bzip3.yaml
+++ b/bzip3.yaml
@@ -2,7 +2,7 @@
 package:
   name: bzip3
   version: 1.5.1
-  epoch: 0
+  epoch: 1
   description: Better and stronger spiritual successor to BZip2
   copyright:
     - license: LGPL-3.0-or-later
@@ -47,6 +47,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: bzip3-dev
 
   - name: libbzip3
     pipeline:
