--- a/cairo.yaml
+++ b/cairo.yaml
@@ -1,7 +1,7 @@
 package:
   name: cairo
   version: 1.18.2
-  epoch: 2
+  epoch: 3
   description: A vector graphics library
   copyright:
     - license: LGPL-2.0-or-later OR MPL-1.1
@@ -71,6 +71,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: cairo-dev
 
   - name: cairo-gobject
     # dependencies:
