update py3-prettytable.yaml to change GitHub identifier for updates

--- a/py3-prettytable.yaml
+++ b/py3-prettytable.yaml
@@ -105,5 +105,4 @@ subpackages:
 update:
   enabled: true
   github:
-    identifier: prymitive/karma
-    strip-prefix: v
+    identifier: prettytable/prettytable
