--- a/dav1d.yaml
+++ b/dav1d.yaml
@@ -1,7 +1,7 @@
 package:
   name: dav1d
   version: "1.5.1"
-  epoch: 0
+  epoch: 1
   description: small and fast AV1 Decoder
   copyright:
     - license: BSD-2-Clause
@@ -50,6 +50,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: dav1d-dev
 
   - name: libdav1d
     pipeline:
@@ -58,9 +61,9 @@ subpackages:
           mv ${{targets.destdir}}/usr/lib/libdav1d.so* ${{targets.subpkgdir}}/usr/lib/
     test:
       pipeline:
-        - uses: test/ldd-check
+        - uses: test/tw/ldd-check
           with:
-            packages: $(basename ${{targets.contextdir}})
+            packages: ${{subpkg.name}}
 
 update:
   enabled: true
