chore(ingress-nginx-controller-1.12.yaml): improve tests
Signed-off-by: Massimiliano Giovagnoli <massimiliano.giovagnoli@chainguard.dev>

--- a/ingress-nginx-controller-1.12.yaml
+++ b/ingress-nginx-controller-1.12.yaml
@@ -560,6 +560,9 @@ subpackages:
               /nginx-ingress-controller --kubeconfig ~/.kube/config
             timeout: 30
             expected_output: |
+              NGINX Ingress controller
+              Release:       controller-v${{package.version}}
+              nginx version: nginx/${{vars.NGINX_VERSION}}
               Running in Kubernetes cluster
 
   - name: ingress-nginx-controller-compat-${{vars.nginx-ingress-major-minor}}
@@ -788,4 +791,7 @@ test:
           nginx-ingress-controller --kubeconfig ~/.kube/config
         timeout: 30
         expected_output: |
+          NGINX Ingress controller
+          Release:       controller-v${{package.version}}
+          nginx version: nginx/${{vars.NGINX_VERSION}}
           Running in Kubernetes cluster
