--- a/libimagequant.yaml
+++ b/libimagequant.yaml
@@ -1,7 +1,7 @@
 package:
   name: libimagequant
   version: "4.3.4"
-  epoch: 0
+  epoch: 1
   description: Palette quantization library that powers pngquant and other PNG optimizers
   copyright:
     - license: GPL-3.0-or-later
@@ -107,6 +107,9 @@ subpackages:
             ./test_libimagequant
             ldd ./test_libimagequant | grep "libimagequant.so" && exit 0 || exit 1
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: libimagequant-dev
 
 update:
   enabled: true
