--- a/libjpeg-turbo.yaml
+++ b/libjpeg-turbo.yaml
@@ -1,7 +1,7 @@
 package:
   name: libjpeg-turbo
   version: 3.1.0
-  epoch: 0
+  epoch: 1
   description: "Accelerated baseline JPEG compression and decompression library"
   copyright:
     - license: BSD-3-Clause AND IJG AND Zlib
@@ -44,6 +44,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: libjpeg-turbo-dev
 
   - name: "libjpeg-turbo-doc"
     description: "libjpeg-turbo documentation"
@@ -54,6 +57,9 @@ subpackages:
     dependencies:
       runtime:
         - libjpeg-turbo-dev
+    test:
+      pipeline:
+        - uses: test/docs
 
   - name: "libjpeg-turbo-utils"
     description: "Utilities for manipulating JPEG images"
