--- a/k3s.yaml
+++ b/k3s.yaml
@@ -71,8 +71,7 @@ pipeline:
     with:
       deps: |-
         github.com/go-jose/go-jose/v4@v4.0.5
-        github.com/docker/docker@v26.1.0
-      replaces: golang.org/x/crypto=golang.org/x/crypto@v0.32.0
+      replaces: golang.org/x/crypto=golang.org/x/crypto@v0.32.0 github.com/docker/docker=github.com/docker/docker@v26.1.0
   - runs: |
       # Override the go version check at runtime to always match the go version at build time
       # Ref: https://github.com/k3s-io/k3s/pull/9054
